# NeuroHarmonizerExtension

./: CMakeLists.txt
ComBatHarmonization/: CMakeLists.txt  ComBatHarmonization.py
ComBatHarmonization/Resources/UI/: ComBatHarmonization.ui
DataframesForHarmonization/: CMakeLists.txt  DataframesForHarmonization.py
DataframesForHarmonization/Resources/UI/: DataframesForHarmonization.ui
QuantifyHarmonization/: CMakeLists.txt  QuantifyHarmonization.py
QuantifyHarmonization/Resources/UI/: QuantifyHarmonization.ui
